[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main_scene.gd" type="Script" id=3]
[ext_resource path="res://scenes/GameOverUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/sounds/House In a Forest Loop.ogg" type="AudioStream" id=6]

[node name="main_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="MainMenu" parent="." instance=ExtResource( 2 )]

[node name="Game" parent="." instance=ExtResource( 5 )]
visible = false

[node name="GameOverUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="changeThemeRequest" from="MainMenu" to="." method="_on_MainMenu_changeThemeRequest"]
[connection signal="startRequest" from="MainMenu" to="." method="_on_MainMenu_startRequest"]
[connection signal="gameOver" from="Game" to="." method="_on_Game_gameOver"]
[connection signal="mainMenuRequest" from="GameOverUI" to="." method="_on_GameOverUI_mainMenuRequest"]
[connection signal="restartRequest" from="GameOverUI" to="." method="_on_GameOverUI_restartRequest"]
